# fastapi-admin-web

./: .env  main.py  pyproject.toml
api/routes/: login.py
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: login.py  user.py
app/core/: config.py  db.py
app/model/: common.py  users.py
app/service/: UserService.py
core/: config.py
