[project]
name = "fastapi-admin-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.1.0",
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
]
